gobmkida/c2/propagate_worm
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/propagate_worm/src/engine/worm.c:1669:32: error: use of undeclared identifier 'worm_data'
memcpy( &worm[v7], v2, sizeof( worm_data)); 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/propagate_worm/src/engine/worm.c:1672:32: error: use of undeclared identifier 'worm_data'
memcpy( &worm[v8], v2, sizeof( worm_data)); 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/propagate_worm/src/engine/worm.c:1681:32: error: use of undeclared identifier 'worm_data'
memcpy( &worm[v5], v2, sizeof( worm_data)); 
                               ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/propagate_worm/src/obj/1/worm.o] Error 1
